2008-04-17  Mark Rowe  <mrowe@apple.com>

        Fix the non-Mac builds that I broke with my Mac build fix.

        * css/CSSMutableStyleDeclaration.cpp:
        (WebCore::CSSMutableStyleDeclaration::getLayeredShorthandValue): Explicitly use the size_t version of max
        to avoid making assumptions about sizeof(size_t).

2008-04-17  Mark Rowe  <mrowe@apple.com>

        Rubber-stamped by Dan Bernstein.

        Fix the Mac build.

        * css/CSSMutableStyleDeclaration.cpp:
        (WebCore::CSSMutableStyleDeclaration::getLayeredShorthandValue): Update to use size_t in place of unsigned.
        * dom/NamedNodeMap.h: Ditto.
        * page/AccessibilityObject.h: Forward-declare AccessibilityObjectWrapper in the non-Objective-C case too.

2008-04-16  Jon Honeycutt  <jhoneycutt@apple.com>

        Reviewed by Darin.

        Use size_t instead of unsigned where appropriate.

        * css/CSSValueList.h:
        * dom/NamedAttrMap.h:
        * rendering/RenderStyle.h:

2008-04-15  Jon Honeycutt  <jhoneycutt@apple.com>

        Reviewed by Darin.

        Add some methods to check AccessibilityObject state.

        * page/AccessibilityObject.cpp:
        (WebCore::AccessibilityObject::AccessibilityObject): Assert that the
        passed renderer is not null.
        (WebCore::AccessibilityObject::isPasswordField): Refactored to use early
        return.
        (WebCore::AccessibilityObject::isPressed): Return true if this is a
        button in the pressed state.
        (WebCore::AccessibilityObject::isIndeterminate): Return true if this is
        a tri-state checkbox in the indeterminate state.
        (WebCore::AccessibilityObject::isChecked): True if this is a radio
        button or checkbox in the checked state.
        (WebCore::AccessibilityObject::isHovered): True if object is currently
        under the mouse cursor.
        (WebCore::AccessibilityObject::isMultiSelect): True if this is a select
        element capable of multi-select.