@@ -1,3 +1,12 @@
+2008-04-17  Ariya Hidayat  <ariya.hidayat@trolltech.com>
+
+        Reviewed by Simon.
+
+        Implemented getFileModificationTime and pathGetFileName for the Qt port.
+
+        * platform/qt/FileSystemQt.cpp:
+        (WebCore::getFileModificationTime):
+
 2008-04-17  Mark Rowe  <mrowe@apple.com>
 
         Fix the non-Mac builds that I broke with my Mac build fix.
